# TextDetection

./: CMakeLists.txt  Components.pb.cc  Components.proto  ConnectedComponents.cpp  ConnectedComponents.h  README.md  StrokeWidthTransform.cpp  StrokeWidthTransform.h  build  chain_analysis.py  chains.cd  chains.df  clf.py  comp.model  components.cd  components.csv  components.df  components_chain.py  detect_text  execute.py  feature_extraction.py  main.cpp  text_localizing.py
src/: CMakeLists.txt  Components.pb.cc  Components.pb.h  Components.proto  Components_pb2.py  ConnectedComponents.cpp  ConnectedComponents.h  StrokeWidthTransform.cpp  StrokeWidthTransform.h  chain.model  chain_analysis.py  clf.py  comp.model  components_chain.py  execute.py  feature_extraction.py  main.cpp  text_localizing.py  training_plot.ipynb  write_chain_features.py
